testsuite/tests/ado/ado002.stderr
ado002.hs:8:8: error: [GHC-83865]
    • Couldn't match expected type: Char -> IO b0
                  with actual type: IO Char
    • The function ‘getChar’ is applied to one visible argument,
        but its type ‘IO Char’ has none
      In a stmt of a 'do' block: y <- getChar 'a'
      In the expression:
        do x <- getChar
           y <- getChar 'a'
           print (x, y)

ado002.hs:9:3: error: [GHC-83865]
    • Couldn't match type ‘()’ with ‘Int’
      Expected: IO Int
        Actual: IO ()
    • In a stmt of a 'do' block: print (x, y)
      In the expression:
        do x <- getChar
           y <- getChar 'a'
           print (x, y)
      In an equation for ‘f’:
          f = do x <- getChar
                 y <- getChar 'a'
                 print (x, y)

ado002.hs:13:8: error: [GHC-83865]
    • Couldn't match type ‘Char’ with ‘Int’
      Expected: IO Int
        Actual: IO Char
    • In a stmt of a 'do' block: x <- getChar
      In the expression:
        do x <- getChar
           y <- getChar
           return (y, x)
      In an equation for ‘g’:
          g = do x <- getChar
                 y <- getChar
                 return (y, x)

ado002.hs:14:8: error: [GHC-83865]
    • Couldn't match type ‘Char’ with ‘Int’
      Expected: IO Int
        Actual: IO Char
    • In a stmt of a 'do' block: y <- getChar
      In the expression:
        do x <- getChar
           y <- getChar
           return (y, x)
      In an equation for ‘g’:
          g = do x <- getChar
                 y <- getChar
                 return (y, x)

ado002.hs:20:9: error: [GHC-83865]
    • Couldn't match type ‘Char’ with ‘Int’
      Expected: IO Int
        Actual: IO Char
    • In a stmt of a 'do' block: x2 <- getChar
      In the expression:
        do x1 <- getChar
           x2 <- getChar
           x3 <- const (return ()) x1
           x4 <- getChar
           x5 <- getChar x4
           return (x2, x4)
      In an equation for ‘h’:
          h = do x1 <- getChar
                 x2 <- getChar
                 x3 <- const (return ()) x1
                 x4 <- getChar
                 x5 <- getChar x4
                 return (x2, x4)

ado002.hs:23:3: error: [GHC-83865]
    • Couldn't match expected type ‘Int’ with actual type ‘Char’
    • In the expression:
        do x1 <- getChar
           x2 <- getChar
           x3 <- const (return ()) x1
           x4 <- getChar
           x5 <- getChar x4
           return (x2, x4)
      In an equation for ‘h’:
          h = do x1 <- getChar
                 x2 <- getChar
                 x3 <- const (return ()) x1
                 x4 <- getChar
                 x5 <- getChar x4
                 return (x2, x4)

ado002.hs:23:9: error: [GHC-83865]
    • Couldn't match expected type: Char -> IO a0
                  with actual type: IO Char
    • The function ‘getChar’ is applied to one visible argument,
        but its type ‘IO Char’ has none
      In a stmt of a 'do' block: x5 <- getChar x4
      In the expression:
        do x1 <- getChar
           x2 <- getChar
           x3 <- const (return ()) x1
           x4 <- getChar
           x5 <- getChar x4
           return (x2, x4)

